syntax = "proto3";

import "const.proto";

import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

package engine;

service RoutingSchemaService {
    // Create RoutingSchema
    rpc CreateRoutingSchema(CreateRoutingSchemaRequest) returns (RoutingSchema) {
        option (google.api.http) = {
            post: "/routing/schema"
            body: "*"
        };
    }

    // List RoutingSchema
    rpc SearchRoutingSchema(SearchRoutingSchemaRequest) returns (ListRoutingSchema) {
        option (google.api.http) = {
            get: "/routing/schema"
        };
    }
    // RoutingSchema item
    rpc ReadRoutingSchema(ReadRoutingSchemaRequest) returns (RoutingSchema) {
        option (google.api.http) = {
            get: "/routing/schema/{id}"
        };
    }
    // Update RoutingSchema
    rpc UpdateRoutingSchema(UpdateRoutingSchemaRequest) returns (RoutingSchema) {
        option (google.api.http) = {
            put: "/routing/schema/{id}"
            body: "*"
        };
    }

    // Patch RoutingSchema
    rpc PatchRoutingSchema(PatchRoutingSchemaRequest) returns (RoutingSchema) {
        option (google.api.http) = {
            patch: "/routing/schema/{id}"
            body: "*"
        };
    }

    // Remove RoutingSchema
    rpc DeleteRoutingSchema(DeleteRoutingSchemaRequest) returns (RoutingSchema) {
        option (google.api.http) = {
            delete: "/routing/schema/{id}"
        };
    }
}

message PatchRoutingSchemaRequest {
    int64 id = 1;
    int64 domain_id = 2;

    string name = 3;
    string description = 4;
    int32 type = 5;
    google.protobuf.Value schema = 6;
    google.protobuf.Value payload = 7;
    bool debug = 8;
    repeated string fields = 9;
}

message DeleteRoutingSchemaRequest {
    int64 domain_id = 1;
    int64 id = 2;
}

message UpdateRoutingSchemaRequest {
    int64 id = 1;
    int64 domain_id = 2;
    string name = 3;
    string description = 4;
    int32 type = 5;
    google.protobuf.Value schema = 6;
    google.protobuf.Value payload = 7;
    bool debug = 8;
}

message ReadRoutingSchemaRequest {
    int64 domain_id = 1;
    int64 id = 2;
}

message SearchRoutingSchemaRequest {
    int64 domain_id = 1;
    int32 size = 2;
    int32 page = 3;
}

message CreateRoutingSchemaRequest {
    int64 domain_id = 1;
    string name = 2;
    string description = 3;
    int32 type = 4;
    google.protobuf.Value schema = 5;
    google.protobuf.Value payload = 6;
    bool debug = 7;
}

message RoutingSchema {
    int64 id = 1;
    int64 domain_id = 2;
    int64 created_at = 3;
    Lookup created_by = 4;
    int64 updated_at = 5;
    Lookup updated_by = 6;
    string name = 7;
    string description = 8;
    int32 type = 9;
    google.protobuf.Value schema = 10;
    google.protobuf.Value payload = 11;
    bool debug = 12;
}

message ListRoutingSchema {
    repeated RoutingSchema items = 1;
}